<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr08_20171.Lab2.Activity.activities.Register">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_circle_black_24px"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName|text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_register"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_https_black_24px"
            android:inputType="textPassword"
            android:drawablePadding="10dp"/>

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_register"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24px"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/save_register"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:onClick="saveInfo"/>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
